2009-12-16 Roman
- !!:SYS.Archive: Adaptive generic request to archives is made.
    For need period make archivator quality select. Prevent long time processin for big intervals.
- FIX:DAQ.ICP_DAS: Main controller's task start flag set is made after first call.
- DAQ.OPC_UA: Security connection establish request, base realisation, is added.
- UI.QTCfg, UI.Vision: Text fields apply by Ctrl+Enter is added.
    

2009-12-11 Roman
- FIX:UI.Vision: Modify status check into development mode is fixed.


2009-12-10 Roman
- !!!!:FIX:DAQ.ModBus: Resource alloc lost on time data gathering is fixed.
    By reason resourced string's assign for direct string set, by constructor.
- FIX:SYS.Resource: Resource string implicit assign by constructor is prevented.
- UI.Vision: Global saving is added to development mode.


2009-12-09 Roman
- SYS.Resource: String resources' functions is moved to library.
- DAQ.ICP_DAS: Return value process for broken connections is added.
- DAQ.ModBus: Memory reserve to request's buffers allocation is added for prevent memory reallocation.
- !!:DAQ: Template module "=Tmpl=" for "DAQ" subsystem is created.
- !!:DAQ: Start realisation of module "OPC_UA" is added.
- FIX:Protocol.=Tmpl=: Some messages fixes is made.


2009-12-03 Roman
- DAQ.BlockCalc: Input links setup allow is added for output attributes.
- DAQ.ICP_DAS: Parallel bus' devices access resource is added.
- FIX:DAQ.JavaLikeCalc: The access to objects is fixed as functions parameter (IO).
- Transport.Sockets: Protocol error message is added for empty or broken protocols.
- !!!!:UI.VCAEngine: The special attribute "this" is added for direct access to control object (Widget or Page) from scripts.
    To object "Widget" added functions of user's API: ownerSess(), ownerPage(), ownerWdg(), attrPresent(), attr() and attrSet().


2009-12-01 Roman
- !!!!:SYS: Global functions is added for central control for OpenSCADA tasks: taskCreate() and taskDestroy(). All OpenSCADA parts is used new tasks API.